--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ margin-left: 200px;
     align-items: center;
     justify-content: center;
     margin: 12px;
+    width: 80vw;
 
 }
 
@@ -737,6 +738,7 @@ display: none;
 
     
 }
+
 
 
 
