--- a/style.css
+++ b/style.css
@@ -729,6 +729,12 @@ display: none;
     font-size: 18px;
    }
 
+    .chinook__link:hover{
+  font-size: 20px;
+  transition: all 300ms ease;
+}
+    
+
 }
 
 @media (max-width: 550px){
@@ -738,6 +744,7 @@ display: none;
 
     
 }
+
 
 
 
